# harp.device.environment_sensor

./: README.md
firmware/: CMakeLists.txt
firmware/inc/: Adafruit_BME680_rpi.h  bme688.h  config.h  core1_sensor.h  myspi.h
firmware/src/: Adafruit_BME680_rpi.cpp  bme688.cpp  bme68x_common.c  core1_sensor.cpp  main.cpp  main_debug_noharp.cpp  myspi.cpp
hardware/board/environment_sensor/: environment_sensor.kicad_pcb  environment_sensor.kicad_pro  environment_sensor.kicad_sch  rp2040_with_usb.kicad_sch
software/python/: pyproject.toml
software/python/src/harp_env_sensor/: __init__.py  main.py
software/python/src/harp_env_sensor/models/: device.py  register.py
